; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/bdb/extr_node-origins-table.c_svn_fs_bdb__get_node_origin.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/bdb/extr_node-origins-table.c_svn_fs_bdb__get_node_origin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { %struct.TYPE_16__* }
%struct.TYPE_16__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i32 (%struct.TYPE_13__*, i32, i32, i32, i32)* }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_17__ = type { i32, i32 }

@.str = private unnamed_addr constant [13 x i8] c"node-origins\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"get\00", align 1
@DB_NOTFOUND = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_bdb__get_node_origin(i32** %0, %struct.TYPE_15__* %1, i8* %2, %struct.TYPE_14__* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca %struct.TYPE_15__*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_14__*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_16__*, align 8
  %13 = alloca %struct.TYPE_17__, align 4
  %14 = alloca %struct.TYPE_17__, align 4
  %15 = alloca i32, align 4
  store i32** %0, i32*** %7, align 8
  store %struct.TYPE_15__* %1, %struct.TYPE_15__** %8, align 8
  store i8* %2, i8** %9, align 8
  store %struct.TYPE_14__* %3, %struct.TYPE_14__** %10, align 8
  store i32* %4, i32** %11, align 8
  %16 = load %struct.TYPE_15__*, %struct.TYPE_15__** %8, align 8
  %17 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_16__*, %struct.TYPE_16__** %17, align 8
  store %struct.TYPE_16__* %18, %struct.TYPE_16__** %12, align 8
  %19 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %20 = call i32 @svn_fs_base__trail_debug(%struct.TYPE_14__* %19, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %21 = load %struct.TYPE_16__*, %struct.TYPE_16__** %12, align 8
  %22 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_13__*, %struct.TYPE_13__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %23, i32 0, i32 0
  %25 = load i32 (%struct.TYPE_13__*, i32, i32, i32, i32)*, i32 (%struct.TYPE_13__*, i32, i32, i32, i32)** %24, align 8
  %26 = load %struct.TYPE_16__*, %struct.TYPE_16__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_13__*, %struct.TYPE_13__** %27, align 8
  %29 = load %struct.TYPE_14__*, %struct.TYPE_14__** %10, align 8
  %30 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i8*, i8** %9, align 8
  %33 = call i32 @svn_fs_base__str_to_dbt(%struct.TYPE_17__* %13, i8* %32)
  %34 = call i32 @svn_fs_base__result_dbt(%struct.TYPE_17__* %14)
  %35 = call i32 %25(%struct.TYPE_13__* %28, i32 %31, i32 %33, i32 %34, i32 0)
  store i32 %35, i32* %15, align 4
  %36 = load i32*, i32** %11, align 8
  %37 = call i32 @svn_fs_base__track_dbt(%struct.TYPE_17__* %14, i32* %36)
  %38 = load i32, i32* %15, align 4
  %39 = load i32, i32* @DB_NOTFOUND, align 4
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %41, label %45

41:                                               ; preds = %5
  %42 = load %struct.TYPE_15__*, %struct.TYPE_15__** %8, align 8
  %43 = load i8*, i8** %9, align 8
  %44 = call i32* @svn_fs_base__err_no_such_node_origin(%struct.TYPE_15__* %42, i8* %43)
  store i32* %44, i32** %6, align 8
  br label %54

45:                                               ; preds = %5
  %46 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %14, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %14, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = load i32*, i32** %11, align 8
  %51 = call i32* @svn_fs_base__id_parse(i32 %47, i32 %49, i32* %50)
  %52 = load i32**, i32*** %7, align 8
  store i32* %51, i32** %52, align 8
  %53 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %53, i32** %6, align 8
  br label %54

54:                                               ; preds = %45, %41
  %55 = load i32*, i32** %6, align 8
  ret i32* %55
}

declare dso_local i32 @svn_fs_base__trail_debug(%struct.TYPE_14__*, i8*, i8*) #1

declare dso_local i32 @svn_fs_base__str_to_dbt(%struct.TYPE_17__*, i8*) #1

declare dso_local i32 @svn_fs_base__result_dbt(%struct.TYPE_17__*) #1

declare dso_local i32 @svn_fs_base__track_dbt(%struct.TYPE_17__*, i32*) #1

declare dso_local i32* @svn_fs_base__err_no_such_node_origin(%struct.TYPE_15__*, i8*) #1

declare dso_local i32* @svn_fs_base__id_parse(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
